# knowledge

./: .gitignore  2025-09-02-使用-pg-trgm、intarray、rjieba、pgvector-打造“长名词”规范化检索：地点识别-语义向量的混合方案.md  README.md
codes/mysql/: init.sql
codes/postgres/: Dockerfile  data.sql  init.sql
docs/: index.html  jvm-functional-programming.html  postgres.html
docs/css/: moon.css
examples/python/: .gitignore  README.md  pyproject.toml  ruff.toml
examples/python/crawl/base/: crawl_base.py
examples/python/crawl/config/: config.py
examples/python/crawl/models/: crawl_model.py  crawl_page.py
examples/python/crawl/start/: crawler-xiaohongshu.py
examples/python/crawl/utils/: cookie_utils.py  playwright_utils.py  time_utils.py
examples/python/crawl/xiaohongshu/: __init__.py  _helper.py  _xiaohongshu_crawler.py  _xiaohongshu_keyword_crawler.py
knowledges/: china.md  技术图谱.md
knowledges/ai-coding/: AI Coding + Agent - Hono.md  AI Coding 与 tmux 最佳实践指南.md  AI 自动软件公司-tech-stack.md  AI-first Backend Engineering System.md  README.md  claude.md  good-CLAUDE.md-example.md
knowledges/linux/: README.md  centos.md  common-commands.md  kvm.md  network.md  rocky.md
knowledges/llm/: huggingface.md  learn.md  llm.md  rag.md
knowledges/prompts/: coding-prompts.md
knowledges/python/: conda.md  uv.md
knowledges/rn/: install.md
knowledges/rust/: 2026.md  select.md
learn/: math-learning-plan.md  math-learning-week-todo.md  mathematics-for-ml.md
ppts/: jvm-functional-programming.md  jvm-functional-programming.xml  postgres.md
share/: README.md
杂文/:  AI的机遇.md
(+404 files in other folders)
