[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "crawl4ai>=0.7.4",
    "httpx>=0.28.1",
    "playwright>=1.55.0",
    "psycopg[binary,pool]>=3.2.9",
    "sqlmodel>=0.0.24",
]
